2004-01-01  Al Riddoch  <alriddoch@zepler.org>

	* benchmark/Makefile.am: Use INCLUDES as CPPFLAGS is reserved.

2003-12-19  Al Riddoch  <alriddoch@zepler.org>

	* Remove Serial from rpm spec as it is not required, and messes up
	  deps.

2003-12-08  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Atlas.h, Atlas/Debug.h: Move Atlas.h to Debug.h and
	  modify macro to use file specific flag, to curb the flood
	  of debug output.

	* Atlas/Codecs/Bach.cpp, Atlas/Message/DecoderBase.cpp: Add
	  local debug flag, and disable excessive output.

2003-12-06  Al Riddoch  <alriddoch@zepler.org>

	* benchmark/SmartPtr_Move.cpp: Sort out DEBUG definition clash.

2003-12-04  Al Riddoch  <alriddoch@zepler.org>

	* Clean up and canonicalise configure.ac.

	* Fix link order issues with atlas_convert.

	* Use suffix define in pkgconfig spec.

2003-12-03  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Utilities/Makefile.am: Ensure atlas_convert builds
	  correctly, especially important when using cross compiler.

2003-11-11  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/gen_cpp.py: Re-work default object code so it is
	  not a static instance, and is instead a kind of singleton.

	* Atlas/Objects/gen_cpp.py: Make object constructors protected
	  so it is clear that these objects should not be directly
	  instanced.

2003-10-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/SmartPtr.h: Modified explicit casts so they are
	  easier to use.

	* Atlas/Objects/GenerateDispatcher.py: Updated usage of casts in
	  Atlas::Objects::Dispatcher.

2003-10-27  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/loadDefaults.cpp: Modify LoadDefaultsDecoder
	  so it no longer uses Dispatcher, which it didn't really require
	  anyway. Tweak the API and its usage for efficiency.

2003-10-26  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateDispatcher.py: Final attempt to get
	  OSX's weird gcc to take this code.

2003-10-14  Al Riddoch  <alriddoch@zepler.org>
